--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.12.11",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "read-scripts": "^1.1.0",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
     "uws": "^10.148.1"
